--- a/Changelog.txt
+++ b/Changelog.txt
@@ -3,6 +3,7 @@
 [new] 2 new files were added (CSS files)
 [removed] popup version was removed
 [new] More styles was added
+[fixed] QR Code was fixed (offline)
 
 1.0.0
 [new] The first version of the extension released
